# hyperagents-adk-factor-lab

./: .dockerignore  .env.example  .gitignore  ADK_WEB_DEMO.md  ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVPOST_SUBMISSION_DRAFT.md  Dockerfile  IMPLEMENTATION_PLAN.md  PRESENTATION_STRATEGY.md  README.md  REVIEWER_INSTRUCTIONS.md  SUBMISSION.md  environment.yml  pyproject.toml
assets/: architecture.mmd  mcp_flow.mmd  native_adk_flow.mmd
eval/: eval_config.json  mcp_eval_config.json  research_eval_config.json  safety_eval_config.json  smoke_eval_config.json
eval/data/: hyper_adk_mcp.test.json  hyper_adk_research.test.json  hyper_adk_safety.test.json  hyper_adk_smoke.test.json
hyper_adk/: __init__.py  agent.py  config.py  mcp_server.py  prompt.py
hyper_adk/data/: learning_patch_examples.json  study_manifest.json
hyper_adk/sub_agents/: __init__.py  evaluation_analyst.py  factor_researcher.py  meta_agent.py  (+3 more)
hyper_adk_mcp/: __init__.py  agent.py  fallback_tools.py
hyper_engine/: __init__.py  artifacts.py  evaluator.py  factor_templates.py  runner.py  smoke_data.py
hyper_engine_adk/: __init__.py  agent.py  prompt.py  tools.py
scripts/: create_smoke_sample_data.py  deploy_cloud_run_adk_web.sh  launch_adk_web_demo.sh  start_adk_web_cloud_run.sh
tests/: test_agent_imports.py  test_architecture_files.py  test_config.py  test_deployment_files.py  test_eval_docs.py  test_mcp_agent_prompt.py  test_mcp_fallback_tools.py  test_mcp_server.py  test_patch_tools.py  test_smoke_data.py  test_smoke_engine.py  test_study_tools.py  test_submission_docs.py
(+12 files in other folders)
